--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,7 @@ html, body{
   vertical-align: middle;
   background-color: #EDEBE3;
   */
+	font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
   display: table;
   margin: 0;
   padding: 0;
@@ -32,7 +33,6 @@ html, body{
 }
 
 header{
-  margin: 0;
   padding: 0;
   float: left;
   top: 0px;                   /* 位置(上0px) */
@@ -40,6 +40,11 @@ header{
   width: 100%;                /* 横幅100%　*/
   /*background-image: url("/img/header_bg_gallery.png");*/
   background-color: #FFF;
+}
+
+header a{
+	margin: 0;
+	text-decoration: none;
 }
 
 .items{
@@ -73,7 +78,9 @@ header{
 }
 
 .logo{
-    max-height: "100";
+	margin: 0;
+	font-size: 24px;
+	color: black;
 }
 
 .page-index{
